# callminer-bulk-pipeline

./: .gitignore  .pre-commit-config.yaml  .terraform-docs.yml  AGENTS.md  Dockerfile  Jenkinsfile  README.md  assume_role.sh  buildspec-pull.yaml  buildspec-push.yaml  project-setup.sh  pyproject.toml
.docs/: CALLMINER_TIMEOUT.md  CHANGELOG-2025-11-03.md  PPLNS-7142.txt  PPLNS-7143.txt  Step Function Definition
.docs/callminer/: Current Callminer Implementation.txt  PPLNS-7737.xml  PPLNS-7738.xml  PPLNS-7739.xml  PPLNS-7740.xml  PPLNS-7817.xml  README.md
src/: CallMinerBulkApiSchedulerLambda.py  CallMinerLandingRerunLambda.py
src/callminer_bulk_pipeline/handlers/: bulkapi_common.py  bulkapi_reruns.py  bulkapi_scheduler.py
tests/: test_callminer_bulkapi_scheduler.py
tf/: .terraform.lock.hcl  TF_DOCS.md  common_variables.auto.tfvars  ecr.tf  local.tf  main.tf  outputs.tf  provider.tf  variables.tf
tf/bulkapi_scheduler_lambda/: lambda.tf  variables.tf
tf/config/: backend.common.conf
tf/config/dev/: backend.conf  vars.tfvars
tf/config/prod/: backend.conf  vars.tfvars
tf/config/test/: backend.conf  vars.tfvars
tf/deploy-build/: .terraform.lock.hcl  common_variables.auto.tfvars  main.tf  variables.tf
tf/iam/: iam.tf  outputs.tf  variables.tf
tf/modules/bulkapi_scheduler_lambda/: data.tf  lambda.tf  outputs.tf  variables.tf
tf/modules/iam/: iam.tf  locals.tf  outputs.tf  variables.tf
tf/modules/rerun_lambda/: data.tf  lambda.tf  outputs.tf  variables.tf
tf/templates/: assumedrole_policy.json  bulkapi_scheduler_policy.json  rerun_lambda_policy.json
