[project]
name = "callminer-bulk-pipeline"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.12.0"

dependencies = [
    "pyiceberg>=0.10.0",
    "s3fs>=0.4.2",
    "pyarrow>=23.0.0"
]

[dependency-groups]
dev = [
    "boto3>=1.42.31",
    "mypy>=1.19.1"
]
test = [
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
]

[[tool.uv.index]]
name = "codeartifact"
url = "https://data-theverygroup-669610644781.d.codeartifact.eu-west-1.amazonaws.com/pypi/build-cip-service-artifacts/simple/"
publish-url = "https://data-theverygroup-669610644781.d.codeartifact.eu-west-1.amazonaws.com/pypi/build-cip-service-artifacts/"
default = true

# MyPy config
[tool.mypy]
strict = true
mypy_path = "src"

# Ignore missing types in all third-party / external deps
ignore_missing_imports = true

# Be strict again for *your* code
[[tool.mypy.overrides]]
module = ["src.*"]
ignore_missing_imports = false

# Pytest config
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
